[package]
name = "ssh-key-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.1"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
emoji-printer = "0.4.3"
gethostname = "1.1.0"
hex = "0.4.3"
osshkeys = "0.7.0"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
ssh2 = "0.9.5"
sshkeys = "0.3.3"
toml = "1.1.2"
whoami = "1.6.0"
